# oda_reader

./: .bumpversion.cfg  .bumpversion.toml  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bumpversion.cfg  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  codelist-drift.yml  draft_release.yaml  release.yml  tests.yml
docs/: README.md  mkdocs.yml
docs/docs/: advanced.md  api-reference.md  bulk-downloads.md  caching.md  changelog.md  datasets.md  filtering.md  getting-started.md  index.md  schema-translation.md  why-oda-reader.md
oda_importer/: common.py  dac1.py  dac2a.py  download_tools.py  query_builder.py
oda_importer/schemas/: code_prices_corrections.json  dac1_codes_area.json  dac1_codes_flow_types.json  dac1_codes_prices.json  dac1_translation.py  dac2_codes_area.json  dac2_translation.py  schema_tools.py  xml_tools.py
oda_reader/: __init__.py  _cache.py  aiddata.py  cache_tools.py  common.py  crs.py  dac1.py  dac2a.py  download_tools.py  multisystem.py  private.py  query_builder.py  tools.py
oda_reader/download/: download_tools.py  query_builder.py
oda_reader/schemas/: dac1_translation.py  dac2_translation.py  multisystem_translation.py  private_translation.py  schema_tools.py  xml_tools.py
oda_reader/schemas/mappings/: aidData_schema.json  area_code_corrections.json  crs_dotstat.json  dac2a_dotstat.json  multisystem_dotstat.json
schemas/: dac1_codes_prices.json  schema_tools.py
scripts/data_maintenance/: _common.py  _static_overlays.py  refresh_dac_codelists.py
src/oda_reader/: __init__.py  _http_primitives.py  aiddata.py  common.py  cpa.py  crs.py  dac1.py  dac2a.py  exceptions.py  multisystem.py  tools.py
src/oda_reader/_cache/: README.md  __init__.py  config.py  dataframe.py  legacy.py  manager.py
src/oda_reader/download/: _deflate64.py  download_tools.py  query_builder.py  version_discovery.py
src/oda_reader/schemas/: crs_translation.py  dac1_translation.py  dac2_translation.py  multisystem_translation.py  schema_tools.py  xml_tools.py
src/oda_reader/schemas/mappings/: _provenance.json  aidData_schema.json  area_code_corrections.json  code_prices_corrections.json  crs_dotstat.json  dac1_codes_area.json  dac1_codes_flow_types.json  dac1_codes_prices.json  dac1_dotstat.json  dac2_codes_area.json
tests/: .gitignore  README.md  conftest.py  utils.py
tests/cache/: conftest.py  test_cache_manager_activated.py  test_dataframe_atomic.py  test_deprecation_shims.py  test_freezegun_ttl.py  test_lru_eviction.py
tests/common/unit/: test_cache.py  test_rate_limiter.py
tests/datasets/cpa/integration/: test_cpa_e2e.py
tests/datasets/cpa/unit/: test_cpa_dispatch.py
tests/datasets/crs/integration/: test_crs_e2e.py
tests/datasets/dac1/integration/: test_dac1_e2e.py
tests/datasets/dac2a/integration/: test_dac2a_e2e.py
tests/datasets/dac2a/unit/: test_dac2a_bulk.py
tests/download/unit/: test_deflate64.py  test_download_tools.py  test_query_builder.py  test_version_discovery.py  test_version_fallback.py
tests/fixtures/oecd/: codelist_13.json  codelist_5.json
tests/schemas/unit/: test_dac1_translation.py  test_refresh_dac_codelists.py  test_translation_compat.py
