[project]
name = "oda_reader"
version = "1.3.0.post0"
description = "A simple package to import ODA data from the OECD's API and AidData's database"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jorge Rivera", email = "jorge.rivera@one.org" }
]
requires-python = ">=3.10"
dependencies = [
    "filelock>=3.18.0",
    "joblib>=1.4",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "platformdirs>=4.5.0",
    "pyarrow>=14.0.0",
    "requests>=2.32",
    "requests-cache>=1.2.0",
]


[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
