[project]
name = "oda_reader"
version = "1.4.0"
description = "A simple package to import ODA data from the OECD's API and AidData's database"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jorge Rivera", email = "jorge.rivera@one.org" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "filelock>=3.18.0",
    "joblib>=1.4",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "platformdirs>=4.5.0",
    "pyarrow>=14.0.0",
    "requests>=2.32",
    "requests-cache>=1.2.0",
]


[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
]

[tool.ruff]
# Set the maximum line length
line-length = 88

# Target Python 3.10+
target-version = "py310"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    "htmlcov",
    ".cache",
]

[tool.ruff.lint]
# Enable recommended rules plus extras
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "RUF022",  # Unsorted __all__ (intentional grouping by category)
    "RUF013",  # Implicit Optional (cleaner syntax for defaults)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow longer lines in tests and examples
"tests/**/*.py" = ["E501"]
"docs/examples/**/*.py" = ["E501"]
# Allow global variable usage in cache and common modules (architectural decision)
"src/oda_reader/_cache/*.py" = ["PLW0603"]
"src/oda_reader/common.py" = ["PLW0603"]
# Allow try-except without from (external libraries may not support cause chaining)
"src/oda_reader/download/download_tools.py" = ["B904"]
# Allow camelcase import in tools (QueryBuilder is the standard name)
"src/oda_reader/tools.py" = ["N813"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect line endings
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Fast unit tests (no external dependencies)",
    "integration: Tests that call real OECD API",
    "slow: Long-running tests (bulk downloads)",
    "cache: Tests that verify cache behavior",
]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not integration",
]
